RESOLVED FIXED76407
Crash when calling SecItemAdd with a null result pointer
https://bugs.webkit.org/show_bug.cgi?id=76407
Summary Crash when calling SecItemAdd with a null result pointer
Anders Carlsson
Reported 2012-01-16 16:19:12 PST
Crash when calling SecItemAdd with a null result pointer
Attachments
Patch (1.42 KB, patch)
2012-01-16 16:21 PST, Anders Carlsson
beidson: review+
Anders Carlsson
Comment 1 2012-01-16 16:21:06 PST
Anders Carlsson
Comment 2 2012-01-16 16:25:54 PST
Note You need to log in before you can comment on or make changes to this bug.