Crash when calling SecItemAdd with a null result pointer https://bugs.webkit.org/show_bug.cgi?id=76407 <rdar://problem/10696087>

Reviewed by Brady Eidson.

Add null check.

* WebProcess/mac/SecItemShimMethods.mm:
(WebKit::webSecItemAdd):

Canonical link: https://commits.webkit.org/93229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105105 268f45cc-cd09-0410-ab3c-d52691b4dbfc